--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <h1 class="title">Image Slider</h1>
     <div class="container">
         <img src="./images/car1.jpg" class="slide"/>
     </div>
