--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1 class="title">Image Slider</h1>
     <div class="container">
         <img src="./images/car1.jpg" class="slide"/>
+        <img src="./images/arrow-left.jpg" class="arrow"/>
+        <img src="./images/arrow.jpg" class="arrow"/>
+
     </div>
 </body>
 </html>
