--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <img src="./images/arrow.jpg" class="arrow right"/>
 
     </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
