--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slider</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
 </head>
 <body>
     <h1 class="title">Image Slider</h1>
     <div class="container">
-        <img src="./images/car1.jpg" class="slide"/>
-        <img src="./images/arrow-left.jpg" class="arrow left" />
+        <img src="./images/car1.jpg" class="slide" id="slide"/>
+        <img src="./images/arrow-left.jpg" class="arrow left" onclick="prev()"/>
         <img src="./images/arrow.jpg" class="arrow right" onclick="next()"/>
 
     </div>
-    
+    <script src="./js/script.js"></script>
 </body>
 </html>
